# apps/bc-wallet-api-server/src/types/schema/index.ts
@@ -21,10 +21,7 @@ import {
 // $inferInsert only provides fields that are notNull() or generated by default. This seems to be a bug in DrizzleORM or very not pleasant choice
 
 export type User = typeof users.$inferSelect
-export type NewUser = typeof users.$inferInsert & {
-  identifierType?: IdentifierType | null
-  identifier?: string | null
-}
+export type NewUser = typeof users.$inferInsert // NewUser allows id to be preset
 
 export type Asset = typeof assets.$inferSelect
 export type NewAsset = typeof assets.$inferInsert & { fileName?: string | null; description?: string | null }
